<resources>
    <string name="app_name">ProjetAndroid</string>
    <string name="username">Username</string>
    <string name="name">admin</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signin">Sign in</string>
    <string name="personne_form">Person</string>
    <string name="genre">Genre:</string>
    <string name="male">Male</string>
    <string name="cholesterol">Cholesterol :</string>
    <string name="submit">Submit</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="blood_pressure">Blood pressure :</string>
    <string name="female">Female</string>
    <string name="k">K :</string>
    <string name="na">Na :</string>
    <string name="age">Age :</string>
    <string name="algorithm_choice">Algorithm Choice</string>
    <string name="decision_tree">Decision Tree</string>
    <string name="nearest_neighbor">Nearest neighbor</string>
    <string name="naive_bayes">Naive Bayes</string>
    <string name="calculate">Calculate</string>
    <string name="recommended_drug">Recommended Drug :</string>
</resources>