<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:theme="@android:style/Theme.NoTitleBar"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/signin"

        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"

        android:inputType="textPersonName"
        android:padding="28dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints="admin" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="28dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints="admin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        android:backgroundTint="#A62679FC"
        />


</RelativeLayout>