<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurred"
    tools:context=".AlgorithmChoiceActivity">


    <TextView

        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/algorithm_choice"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radio_Choice"
        android:layout_below="@id/title"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="18dp"
        >

        <RadioButton
            android:id="@+id/radio_Cholesterol_DecisionTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingStart="12dp"
            android:paddingEnd="28dp"
            android:textSize="18sp"
            android:text="@string/decision_tree"
            />

        <RadioButton
            android:id="@+id/radio_Choice_NearestNeighbor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingStart="12dp"
            android:paddingEnd="28dp"
            android:textSize="18sp"
            android:text="@string/nearest_neighbor"
            />

        <RadioButton android:id="@+id/radio_Cholesterol_NaiveBayes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"

            android:paddingStart="10dp"
            android:paddingEnd="28dp"
            android:textSize="18sp"
            android:text="@string/naive_bayes"
            />

    </RadioGroup>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_Choice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/calculate"
        android:textSize="20sp"
        android:backgroundTint="#42516A"
        />

    <TextView
        android:id="@+id/algorithm"
        android:layout_below="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Your result is :"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <TextView

        android:id="@+id/result"
        android:layout_below="@+id/algorithm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="30sp"
        android:visibility="gone"
        />


    <com.google.android.material.button.MaterialButton
        android:visibility="gone"
        android:id="@+id/viewDecisionTree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="View Decision Tree"
        android:textSize="20sp"
        android:backgroundTint="#42516A"
        />

</RelativeLayout>